# Global-Hand-Eye-Calib-Toolkit

./: README.md
camera_image/: CMakeLists.txt  package.xml
camera_image/include/: image_process.h
camera_image/launch/: run.launch
camera_image/result/: realsense-corners_x.txt  realsense-corners_y.txt
camera_image/src/: image_process.cpp  main.cpp  main_node.cpp
